--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1 id="title">Portal o grach</h1>
+    </header>
     <a href="https://youtube.com/">jutup</a>
 </body>
 </html>
