--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 id="title">Portal o grach</h1>
+        <h1 id="title"><center>Portal o grach</center></h1>
     </header>
     <a href="https://youtube.com/">jutup</a>
 </body>
