--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <header>
         <h1 id="title"><center>Portal o grach</center></h1>
     </header>
-    <a href="https://youtube.com/">jutup</a>
+    <footer>
+        <p>Autorzy: Igor Czerniak, Mikołaj Malinowski</p>
+    </footer>
 </body>
 </html>
